--- a/app/src/main/res/drawable/bottom_nav_bg.xml
+++ b/app/src/main/res/drawable/bottom_nav_bg.xml
@@ -1,5 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#181818" />
-    <corners android:topLeftRadius="16dp" android:topRightRadius="16dp" />
-</shape> 
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Shadow for the bottom nav -->
+    <item>
+        <shape>
+            <padding android:top="1dp" />
+            <solid android:color="#20000000" />
+            <corners android:topLeftRadius="16dp" android:topRightRadius="16dp" />
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <padding android:top="1dp" />
+            <solid android:color="#30000000" />
+            <corners android:topLeftRadius="16dp" android:topRightRadius="16dp" />
+        </shape>
+    </item>
+    
+    <!-- Main background -->
+    <item>
+        <shape>
+            <solid android:color="@color/colorPrimaryDark" />
+            <corners android:topLeftRadius="16dp" android:topRightRadius="16dp" />
+        </shape>
+    </item>
+</layer-list> 
