--- a/app/src/main/res/layout/activity_screen_light.xml
+++ b/app/src/main/res/layout/activity_screen_light.xml
@@ -58,17 +58,6 @@
                 android:src="@android:drawable/ic_menu_rotate"
                 android:tint="@android:color/white"
                 tools:ignore="UseAppTint" />
-
-            <ImageButton
-                android:id="@+id/btn_settings"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_margin="8dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:contentDescription="Settings"
-                android:src="@android:drawable/ic_menu_preferences"
-                android:tint="@android:color/white"
-                tools:ignore="UseAppTint" />
         </LinearLayout>
     </LinearLayout>
 
@@ -128,10 +117,19 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="64dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/bottom_nav_bg"
+        android:fitsSystemWindows="true"
+        app:itemIconSize="24dp"
+        app:itemTextAppearanceActive="@style/BottomNavigationTextAppearance"
+        app:itemTextAppearanceInactive="@style/BottomNavigationTextAppearance"
         app:itemIconTint="@android:color/white"
         app:itemTextColor="@android:color/white"
+        app:labelVisibilityMode="labeled"
+        app:itemHorizontalTranslationEnabled="false"
+        app:itemPaddingTop="6dp"
+        app:itemPaddingBottom="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_nav_menu" />
 </androidx.constraintlayout.widget.ConstraintLayout> 
