--- a/app/src/main/res/layout/activity_text_light.xml
+++ b/app/src/main/res/layout/activity_text_light.xml
@@ -96,7 +96,7 @@
         android:id="@+id/settings_panel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#222222"
+        android:background="@color/colorPrimaryDark"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation">
 
         <LinearLayout
@@ -118,7 +118,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
 
                 <TextView
                     android:id="@+id/color_preview"
@@ -131,52 +132,11 @@
                     android:textColor="@color/black"
                     android:textStyle="bold" />
 
-                <ImageButton
-                    android:id="@+id/color_red"
-                    android:layout_width="40dp"
+                <com.example.flashlightai.customviews.ColorSliderView
+                    android:id="@+id/color_slider"
+                    android:layout_width="0dp"
                     android:layout_height="40dp"
-                    android:layout_marginEnd="8dp"
-                    android:background="@drawable/circle_red"
-                    android:contentDescription="Red color" />
-
-                <ImageButton
-                    android:id="@+id/color_green"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginEnd="8dp"
-                    android:background="@drawable/circle_green"
-                    android:contentDescription="Green color" />
-
-                <ImageButton
-                    android:id="@+id/color_blue"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginEnd="8dp"
-                    android:background="@drawable/circle_blue"
-                    android:contentDescription="Blue color" />
-
-                <ImageButton
-                    android:id="@+id/color_yellow"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginEnd="8dp"
-                    android:background="@drawable/circle_yellow"
-                    android:contentDescription="Yellow color" />
-
-                <ImageButton
-                    android:id="@+id/color_purple"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginEnd="8dp"
-                    android:background="@drawable/circle_purple"
-                    android:contentDescription="Purple color" />
-
-                <ImageButton
-                    android:id="@+id/color_white"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/circle_white"
-                    android:contentDescription="White color" />
+                    android:layout_weight="1" />
             </LinearLayout>
 
             <!-- Scroll Speed -->
@@ -202,8 +162,8 @@
                     android:layout_marginTop="8dp"
                     android:max="100"
                     android:progress="50"
-                    android:progressTint="@android:color/white"
-                    android:thumbTint="@android:color/white" />
+                    android:progressTint="@color/colorAccent"
+                    android:thumbTint="@color/colorAccent" />
                     
                 <TextView
                     android:id="@+id/tv_speed_value"
@@ -238,8 +198,8 @@
                     android:layout_marginTop="8dp"
                     android:max="150"
                     android:progress="100"
-                    android:progressTint="@android:color/white"
-                    android:thumbTint="@android:color/white" />
+                    android:progressTint="@color/colorAccent"
+                    android:thumbTint="@color/colorAccent" />
                     
                 <TextView
                     android:id="@+id/tv_size_value"
@@ -260,21 +220,12 @@
 
                 <Button
                     android:id="@+id/start_button"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/round_button_bg"
-                    android:text="@string/start_text"
-                    android:textColor="@android:color/white" />
-
-                <Button
-                    android:id="@+id/set_wallpaper_button"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/round_button_bg"
-                    android:text="@string/full_background"
+                    android:backgroundTint="@color/colorAccent"
+                    android:text="@string/fullscreen"
                     android:textColor="@android:color/white" />
             </LinearLayout>
         </LinearLayout>
@@ -284,10 +235,19 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="64dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/bottom_nav_bg"
+        android:fitsSystemWindows="true"
+        app:itemIconSize="24dp"
+        app:itemTextAppearanceActive="@style/BottomNavigationTextAppearance"
+        app:itemTextAppearanceInactive="@style/BottomNavigationTextAppearance"
         app:itemIconTint="@android:color/white"
         app:itemTextColor="@android:color/white"
+        app:labelVisibilityMode="labeled"
+        app:itemHorizontalTranslationEnabled="false"
+        app:itemPaddingTop="6dp"
+        app:itemPaddingBottom="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_nav_menu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
