--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,15 +3,18 @@
     <item
         android:id="@+id/navigation_flash"
         android:icon="@drawable/icon_flash"
-        android:title="@string/flash" />
+        android:title="@string/flash"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/navigation_screen"
         android:icon="@drawable/icon_screen"
-        android:title="@string/screen_light" />
+        android:title="@string/screen_light"
+        app:showAsAction="ifRoom" />
         
     <item
         android:id="@+id/navigation_text_light"
         android:icon="@drawable/icon_text"
-        android:title="@string/text_light" />
+        android:title="@string/text_light"
+        app:showAsAction="ifRoom" />
 </menu> 
