--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/icon_home"
+        android:title="@string/home" />
+    
+    <item
         android:id="@+id/navigation_flash"
         android:icon="@drawable/icon_flash"
         android:title="@string/flash" />
     
     <item
-        android:id="@+id/navigation_screen"
-        android:icon="@drawable/icon_screen"
-        android:title="@string/screen_light" />
-    
-    <item
-        android:id="@+id/navigation_text_light"
-        android:icon="@drawable/icon_text"
-        android:title="@string/text_light" />
+        android:id="@+id/navigation_settings"
+        android:icon="@drawable/icon_settings"
+        android:title="@string/settings" />
 </menu> 
