"update hoàn thiện chua ghep setting"

--- a/app/src/main/res/drawable/bottom_nav_bg.xml
+++ b/app/src/main/res/drawable/bottom_nav_bg.xml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Shadow for the bottom nav -->
+    <!-- Shadow layers for bottom nav with modern effect -->
+    <item>
+        <shape>
+            <padding android:top="1dp" />
+            <solid android:color="#10000000" />
+            <corners android:topLeftRadius="20dp" android:topRightRadius="20dp" />
+        </shape>
+    </item>
     <item>
         <shape>
             <padding android:top="1dp" />
             <solid android:color="#20000000" />
-            <corners android:topLeftRadius="16dp" android:topRightRadius="16dp" />
+            <corners android:topLeftRadius="20dp" android:topRightRadius="20dp" />
         </shape>
     </item>
     <item>
         <shape>
             <padding android:top="1dp" />
             <solid android:color="#30000000" />
-            <corners android:topLeftRadius="16dp" android:topRightRadius="16dp" />
+            <corners android:topLeftRadius="20dp" android:topRightRadius="20dp" />
         </shape>
     </item>
     
-    <!-- Main background -->
+    <!-- Main background with slight gradient -->
     <item>
         <shape>
-            <solid android:color="@color/colorPrimaryDark" />
-            <corners android:topLeftRadius="16dp" android:topRightRadius="16dp" />
+            <gradient
+                android:startColor="#0C1630"
+                android:endColor="#1A2E4A"
+                android:angle="90" />
+            <corners android:topLeftRadius="20dp" android:topRightRadius="20dp" />
         </shape>
     </item>
 </layer-list> 
