--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_display_height_when_editing">100dp</dimen>
+    <dimen name="linear_layout_height">200dp</dimen>
 </resources> 
