--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -43,20 +43,70 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                    <androidx.appcompat.widget.SwitchCompat
-                        android:id="@+id/switch_call_notification"
+                    <RelativeLayout
+                        android:id="@+id/layout_call_notification"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:text="@string/call_flash_notification"
-                        android:textColor="@android:color/white" />
+                        android:layout_marginBottom="16dp"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:background="?attr/selectableItemBackground"
+                        android:padding="8dp">
+                        
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerVertical="true"
+                            android:text="@string/call_flash_notification"
+                            android:textColor="@android:color/white" />
+                            
+                        <androidx.appcompat.widget.SwitchCompat
+                            android:id="@+id/switch_call_notification"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:minWidth="48dp"
+                            android:minHeight="48dp"
+                            android:padding="12dp"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:thumb="@drawable/switch_thumb"
+                            android:track="@drawable/switch_track_selector" />
+                    </RelativeLayout>
 
-                    <androidx.appcompat.widget.SwitchCompat
-                        android:id="@+id/switch_sms_notification"
+                    <RelativeLayout
+                        android:id="@+id/layout_sms_notification"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/sms_flash_notification"
-                        android:textColor="@android:color/white" />
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:background="?attr/selectableItemBackground"
+                        android:padding="8dp">
+                        
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerVertical="true"
+                            android:text="@string/sms_flash_notification"
+                            android:textColor="@android:color/white" />
+                            
+                        <androidx.appcompat.widget.SwitchCompat
+                            android:id="@+id/switch_sms_notification"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:minWidth="48dp"
+                            android:minHeight="48dp"
+                            android:padding="12dp"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:thumb="@drawable/switch_thumb"
+                            android:track="@drawable/switch_track_selector" />
+                    </RelativeLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -84,14 +134,6 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                    <androidx.appcompat.widget.SwitchCompat
-                        android:id="@+id/switch_dark_mode"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:text="@string/dark_mode"
-                        android:textColor="@android:color/white" />
-
                     <TextView
                         android:id="@+id/btn_language"
                         android:layout_width="match_parent"
@@ -102,7 +144,7 @@
                         android:padding="8dp"
                         android:text="@string/language"
                         android:textColor="@android:color/white"
-                        android:visibility="gone" />
+                        android:visibility="visible" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -161,7 +203,8 @@
                         android:drawableEnd="@android:drawable/ic_menu_more"
                         android:padding="8dp"
                         android:text="@string/privacy_policy"
-                        android:textColor="@android:color/white" />
+                        android:textColor="@android:color/white"
+                        android:contentDescription="https://www.google.com/privacy" />
 
                     <TextView
                         android:id="@+id/btn_terms"
@@ -171,7 +214,8 @@
                         android:drawableEnd="@android:drawable/ic_menu_more"
                         android:padding="8dp"
                         android:text="@string/terms_of_use"
-                        android:textColor="@android:color/white" />
+                        android:textColor="@android:color/white"
+                        android:contentDescription="https://www.google.com/terms" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
