--- a/app/src/main/res/layout/fragment_language_selection.xml
+++ b/app/src/main/res/layout/fragment_language_selection.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:gravity="center"
-        android:text="@string/select_language"
+        android:text="Select Language"
         android:textColor="@android:color/white"
         android:textSize="22sp"
         android:textStyle="bold"
@@ -30,7 +30,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
         android:gravity="center"
-        android:text="@string/select_your_language"
+        android:text="Please select your preferred language"
         android:textColor="@android:color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +64,7 @@
         android:layout_marginBottom="24dp"
         android:background="@drawable/btn_primary"
         android:padding="12dp"
-        android:text="@string/confirm"
+        android:text="CONFIRM"
         android:drawableEnd="@drawable/icon_check"
         android:drawablePadding="8dp"
         android:textAllCaps="true"
