--- a/app/src/main/res/layout/activity_text_light.xml
+++ b/app/src/main/res/layout/activity_text_light.xml
@@ -251,17 +251,27 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/bottom_nav_bg"
+        android:background="@color/white_10"
         android:elevation="8dp"
         app:itemIconSize="24dp"
         app:itemIconTint="@color/accent"
         app:itemTextColor="@color/white"
         app:itemRippleColor="#40FFFFFF"
         app:labelVisibilityMode="labeled"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/ad_container"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottom_nav_menu" />
+        
+    <!-- Container cho quảng cáo -->
+    <FrameLayout
+        android:id="@+id/ad_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="50dp"
+        android:background="@color/black_10"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
