--- a/app/src/main/res/layout/fragment_flash.xml
+++ b/app/src/main/res/layout/fragment_flash.xml
@@ -331,9 +331,32 @@
                             android:text="@string/fast"
                             android:textColor="#FFFFFF"
                             android:textSize="14sp" />
+
+                        <!-- Thêm TextView hiển thị giá trị tốc độ -->
+                        <TextView
+                            android:id="@+id/tv_speed_value"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_gravity="center"
+                            android:text="275ms"
+                            android:textColor="#4FC3F7"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
+            <!-- Ad Container -->
+            <FrameLayout
+                android:id="@+id/flash_ad_container"
+                android:layout_width="320dp"
+                android:layout_height="200dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/flash_speed_card" />
 
             <!-- Morse Code Title -->
             <TextView
@@ -341,7 +364,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="24dp"
                 android:fontFamily="sans-serif-medium"
                 android:text="@string/morse_code"
@@ -349,7 +372,7 @@
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/flash_speed_card" />
+                app:layout_constraintTop_toBottomOf="@+id/flash_ad_container" />
 
             <!-- Morse Code Container -->
             <androidx.cardview.widget.CardView
